tests/ui/closure-expected-type/expect-infer-var-appearing-twice.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/expect-infer-var-appearing-twice.rs:14:5
   |
LL |     with_closure(|x: u32, y: i32| {
   |     ^^^^^^^^^^^^ ---------------- found signature defined here
   |     |
   |     expected due to this
   |
   = note: expected closure signature `fn(_, _) -> _`
              found closure signature `fn(u32, i32) -> _`
note: required by a bound in `with_closure`
  --> $DIR/expect-infer-var-appearing-twice.rs:2:14
   |
LL | fn with_closure<F, A>(_: F)
   |    ------------ required by a bound in this function
LL |     where F: FnOnce(A, A)
   |              ^^^^^^^^^^^^ required by this bound in `with_closure`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
